<resources>
    <string name="app_name">BlueNotes</string>
    <string name="toolbarTitle">Android Bluetooth Example</string>
    <string name="openbt">Open Bluetooth</string>
    <string name="makeVisible">Make Bluetooth Visible</string>
    <string name="findDevices">Find Devices</string>

    <!-- Buttons in MainActivity -->
    <string name="iconLabelChat">Chat</string>
    <string name="description_chat">Launches chat.</string>
    <string name="iconLabelFile">Send File</string>
    <string name="description_file">Lets you send a file.</string>
    <string name="iconLabelImage">Images</string>
    <string name="description_image">Lets you share images.</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="description_clipArt">Sticky notes.</string>
</resources>
