<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/button_chat"
        android:layout_width="92dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/description_chat"
        android:onClick="launchChat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_file"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_chat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/iconLabelChat"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button_chat"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="@+id/button_chat"
        app:layout_constraintTop_toTopOf="@+id/button_chat" />

    <ImageButton
        android:id="@+id/button_file"
        android:layout_width="92dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/description_file"
        android:onClick="launchTransferFile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_chat"
        app:srcCompat="@drawable/ic_file" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iconLabelFile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button_file"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/button_file"
        app:layout_constraintTop_toBottomOf="@+id/button_file" />

    <ImageButton
        android:id="@+id/button_image"
        android:layout_width="92dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/description_image"
        android:onClick="launchImages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_file"
        app:srcCompat="@drawable/ic_image" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iconLabelImage"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button_image"
        app:layout_constraintStart_toStartOf="@+id/button_image"
        app:layout_constraintTop_toBottomOf="@+id/button_image" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="156dp"
        android:layout_height="150dp"
        android:contentDescription="@string/description_clipArt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name"
        app:srcCompat="@drawable/stickynotes" />

</android.support.constraint.ConstraintLayout>